feat: add WhatsApp block

--- a/src/scss/components/_social-network.scss
+++ b/src/scss/components/_social-network.scss
@@ -21,6 +21,7 @@ main {
 
         &:hover{
             background-color: $blue;
+            color: $white;
             box-shadow: 0 0 10px 5px $blue;
         }
 
