--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -134,6 +134,7 @@ main .social-network {
 }
 main .social-network:hover {
   background-color: #0086df;
+  color: #000;
   box-shadow: 0 0 10px 5px #0086df;
 }
 main .social-network__text {
